--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <title>t.m</title>
 <link rel="shortcut icon" href="/favicon.png">
 </head>
-hello world
+hello world<br>
 <a href="/mathematical-diary.pdf">mathematical diary</a>
