--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 <link rel="shortcut icon" href="/favicon.png">
 </head>
 hello world<br>
-<a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 8.8.20
+<a href="/mathematical-diary.pdf" color=blue>mathematical diary</a> --- last update: 8.8.20
