--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<head>
-<title>t.m</title>
-<link rel="shortcut icon" href="/favicon.png">
-</head>
+<style> a { color:blue } </style>
+<head> <title>t.m</title> <link rel="shortcut icon" href="/favicon.png"> </head>
 hello world<br>
-<a href="/mathematical-diary.pdf" color=blue>mathematical diary</a> --- last update: 8.8.20
+<a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 8.8.20
