--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<style> html{ font-family: Montserrat } a{ color:blue; text-decoration:none;} </style>
+<style> html{ font-family: Palatino } a{ color:blue; text-decoration:none;} </style>
 <head> <title>t.m</title> <link rel="shortcut icon" href="/favicon.png"> </head>
 hello world<br>
 <a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 8.8.20
