--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <head> <title>t.m</title> <link rel="shortcut icon" href="/favicon.png"> </head>
 hello world<br>
 <a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 9.8.20
+<a href="/learning-links.pdf">learning-links</a> --- last update: 10.8.20
