--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <style> html{font-family: Arial} a{color:blue; text-decoration:none;} </style>
 <head> <title>t.m</title> <link rel="shortcut icon" href="/favicon.png"> </head>
-hello world<br>
-<a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 9.8.20
+hello world <br>
+<a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 9.8.20 <br>
 <a href="/learning-links.pdf">learning-links</a> --- last update: 10.8.20
