--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <style> html{font-family: Arial; font-size: 25px;} a{color:blue; text-decoration:none;} </style>
 <head> <title>t.m</title> <link rel="shortcut icon" href="/favicon.png"> </head>
 hello world <br>
-<a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 9.aug.20 <br>
-<a href="/learning-links.pdf">learning links</a> --- last update: 11.aug.20
+<a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 9.8.20 <br>
+<a href="/learning-links.pdf">learning links</a> --- last update: 11.8.20 <br>
+<a href="/learning-recommendations.txt">learning recommendations</a> --- last update: 12.8.20
