--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 hello world <br>
 <a href="/mathematical-diary.pdf">mathematical diary</a> --- last update: 9.8.20 <br>
 <a href="/learning-links.pdf">learning links</a> --- last update: 11.8.20 <br>
-<a href="/learning-recommendations.txt">book recommendations</a> --- last update: 12.8.20
+<a href="/book-recommendations.txt">book recommendations</a> --- last update: 12.8.20
