--- a/index.html
+++ b/index.html
@@ -1,40 +1,21 @@
-<!DOCTYPE html>
-<html>
+
+
+
 <head>
-<style>
-
-html {font-family: Arial; font-size: 25px;}
-
-a{color:blue; text-decoration:none;}
-
-.grid-container {
-  display: grid;
-  grid-gap: 5px;
-  grid-template-columns: 350px auto;
-  background-color: #ffffff;
-  padding: 5px;
-}
-
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 0px solid rgba(0, 0, 0, 0.8);
-  padding: 5px;
-  font-size: 25px;
-  text-align: left;
-}
-</style>
-</head>
-<body>
+  <title>t.m</title>
+  <link rel="shortcut icon" href="/favicon.png">
+</head>  
+  <link rel="stylesheet" type="text/css" href="a.css">
 
 <div class="grid-container">
   <div class="grid-item">hello world</div>
   <div class="grid-item"> updated:</div>
   <div id="link1" class="grid-item"><a href="/mathematical-diary.pdf">mathematical diary</a></div>
-  <div id="date1" class="grid-item">9.8.20</div>
+  <div id="date1" class="grid-item">                                                               9.8.20</div>
   <div id="link2" class="grid-item"><a href="/learning-links.pdf">learning links</a></div>  
-  <div id="date2" class="grid-item">12.8.20</div>
+  <div id="date2" class="grid-item">                                                               12.8.20</div>
   <div id="link3" class="grid-item"><a href="/book-recommendations.txt">book recommendations</a></div>
-  <div id="date3" class="grid-item">12.8.20</div>    
+  <div id="date3" class="grid-item">                                                               12.8.20</div>    
 </div>
-</body>
-</html>
+
+
