--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-
-
-
 <head>
   <title>t.m</title>
   <link rel="shortcut icon" href="/favicon.png">
 </head>  
   <link rel="stylesheet" type="text/css" href="a.css">
-
+<body>
 <div class="grid-container">
   <div class="grid-item">hello world</div>
   <div class="grid-item"> updated:</div>
@@ -17,5 +14,20 @@
   <div id="link3" class="grid-item"><a href="/book-recommendations.txt">book recommendations</a></div>
   <div id="date3" class="grid-item">                                                               12.8.20</div>    
 </div>
-
+  <!-- Default Statcounter code for website http://tom-moshaiov.github.io -->
+<script type="text/javascript">
+var sc_project=12375648; 
+var sc_invisible=0; 
+var sc_security="b4a3a7e1"; 
+var sc_https=1; 
+var scJsHost = "https://";
+document.write("<sc"+"ript type='text/javascript' src='" + scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="real time web analytics"
+href="https://statcounter.com/" target="_blank"><img class="statcounter"
+src="https://c.statcounter.com/12375648/0/b4a3a7e1/0/" alt="real time web
+analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
+</body>
 
