--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <div id="date3" class="grid-item">                                                               12.8.20</div>    
 </div>
 
-<!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7649724&style=0003&nbdigits=5&type=page&initCount=0" title="Web Counter" Alt="counter free"   border="0" >
-</a>            
+
+
+<img src="https://hitwebcounter.com/counter/counter.php?style=0007&nbdigits=5&type=page&initCount=0">   
 
 
