--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 
 
-<img src="https://hitwebcounter.com/counter/counter.php?style=0007&nbdigits=5&type=page&initCount=0">   
+<img class="counter" src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">   
 
 
