--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </div>
 
 
-
-<img class="enclose problem" src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">   
+<div class="enclose problem">
+  <img src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">  
+</div>
+ 
 
 
