--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 
-<div class="enclose problem">
+<div id="bottom">Bottom Content Div
   <img src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">  
 </div>
  
