--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>  
   <link rel="stylesheet" type="text/css" href="a.css">
 
+<body>
 <div class="grid-container">
   <div class="grid-item">hello world</div>
   <div class="grid-item"> updated:</div>
@@ -19,6 +20,7 @@
 <div id="bottom">Bottom Content Div
   <img src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">  
 </div>
+</body>
  
 
 
