--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 
 
-<div id="bottom">Bottom Content Div
+<div id="bottom">
   <img src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">  
 </div>
 </body>
