--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div id="date3" class="grid-item">                                                               12.8.20</div>    
 </div>
 
+  <a href="/temp.html">temp</a>
 
 <div id="bottom">
   <img src="https://hitwebcounter.com/counter/counter.php?page=7649729&style=0007&nbdigits=5&type=page&initCount=0">  
