--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <style> html{font-family: Arial} </style>
 404 error - couldn't find the page you're looking for <br>
-but think positive - most likely what you are looking for is currently being updated :)
+but think positively - most likely what you are looking for is currently being updated :)
